kubernetes/infrastructure/configs/policies/disallow-latest-tag.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-latest-tag
  annotations:
    policies.kyverno.io/title: Disallow Latest Tag
    policies.kyverno.io/category: Best Practices
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: Pod
spec:
  validationFailureAction: Enforce
  background: true
  rules:
    - name: require-image-tag
      match:
        any:
          - resources:
              kinds:
                - Pod
      validate:
        message: "An explicit image tag is required."
        pattern:
          spec:
            =(initContainers):
              - image: "*:*"
            =(ephemeralContainers):
              - image: "*:*"
            containers:
              - image: "*:*"
    - name: validate-image-tag
      match:
        any:
          - resources:
              kinds:
                - Pod
      validate:
        message: "Using the :latest tag is not allowed; pin a fixed image tag."
        pattern:
          spec:
            =(initContainers):
              - image: "!*:latest"
            =(ephemeralContainers):
              - image: "!*:latest"
            containers:
              - image: "!*:latest"
