kubernetes/infrastructure/configs/policies/require-run-as-non-root.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-run-as-non-root
  annotations:
    policies.kyverno.io/title: Require runAsNonRoot
    policies.kyverno.io/category: Pod Security Standards (Restricted)
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: Pod
spec:
  validationFailureAction: Enforce
  background: true
  rules:
    - name: run-as-non-root
      match:
        any:
          - resources:
              kinds:
                - Pod
      validate:
        message: "runAsNonRoot must be set to true at the pod or container level."
        anyPattern:
          - spec:
              securityContext:
                runAsNonRoot: true
              =(initContainers):
                - =(securityContext):
                    =(runAsNonRoot): true
              =(ephemeralContainers):
                - =(securityContext):
                    =(runAsNonRoot): true
              containers:
                - =(securityContext):
                    =(runAsNonRoot): true
          - spec:
              =(initContainers):
                - securityContext:
                    runAsNonRoot: true
              =(ephemeralContainers):
                - securityContext:
                    runAsNonRoot: true
              containers:
                - securityContext:
                    runAsNonRoot: true
